--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,90 +1,12 @@
-﻿@using PitonProject.Models.Enums;
-@using PitonProject.Models.Entities;
-@model TaskClass;
-@{
+﻿@{
+    Layout = "_LayoutTaskCrud";
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container" style="margin-top:5%">
 
-    <form class="well form-horizontal bv-form" action="" method="post" id="contact_form" novalidate="novalidate">
-        <fieldset>
-
-            <legend><center><h2><b>Görev Yöneticisi</b></h2></center></legend><br>
-            <div style="margin-left:10%">
-                <div class="form-group">
-                    <label class="col-md-3 control-label">Görev Başlığı</label>
-                    <div class="col-md-6 inputGroupContainer">
-                        <div class="input-group">
-                            @Html.TextBoxFor(model => model.Title, new { name = "task_name", @class="form-control", @placeholder="Görev Adı" })
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="col-md-3 control-label">Görev İçeriği</label>
-                    <div class="col-md-6 inputGroupContainer">
-                        <div class="input-group">
-                            @Html.TextAreaFor(model => model.Description, new { name = "description", @class = "form-control", @placeholder = "Görev Açıklaması...", @style = "min-height:75px" })
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="col-md-3 control-label">Zaman Aralığı</label>
-                    <div class="col-md-8 inputGroupContainer">
-                        <div class="input-group" style="width:74%; border:1px gray solid; border-radius:3px; border-spacing:2px;">
-                            <div class="col-sm-4" style="margin-left:5%">
-                                @Html.RadioButtonFor(model => model.TaskType.TaskTypeText, EnumClass.TaskType.day) Günlük
-                            </div>
-                            <div class="col-sm-4">
-                                @Html.RadioButtonFor(model => model.TaskType.TaskTypeText, EnumClass.TaskType.week) Haftalık
-                            </div>
-                            <div class="col-sm-offset-4">
-                                @Html.RadioButtonFor(model => model.TaskType.TaskTypeText, EnumClass.TaskType.month) Aylık
-                            </div>
-
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label class="col-md-3 control-label">Görev Başlangıç Tarihi</label>
-                    <div class="col-md-6">
-                        @Html.TextBoxFor(model => model.StartDate, new { id = "datepicker" })
-                    </div>
-                </div>
-
-                <!-- Selection End -->
-
-                <div class="form-group">
-                    <label class="col-md-3 control-label"></label>
-                    <div class="col-md-6">
-                        <button type="submit" class="btn btn-success" style="width:100%;">Kaydet</button>
-                    </div>
-                </div>
-            </div>
-        </fieldset>
-    </form>
-</div>
-
-@section externalCss {
-    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
-}
-@section externalScript {
-    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
-    <script src="https://unpkg.com/gijgo@1.9.13/js/messages/messages.tr-tr.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/locale/tr.min.js" type="text/javascript"></script>
-    <script>
-        moment.locale('tr');
-        var date = new Date();
-        $('#datepicker').datepicker({
-            showOtherMonths: true,
-            locale: "tr-tr",
-            format: 'dd mmm yyyy',
-            value: moment().format('DD MMM yyyy'),
-        });
-    </script>
-}
+    <div class="form-group">
+        <label class="col-md-3 control-label"></label>
+        <div class="col-md-6">
+            <button type="submit" class="btn btn-success" style="width:100%;">Kaydet</button>
+        </div>
+    </div>
